templates/deployVNet.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "unique": {
      "type": "string",
      "metadata": {
        "description": "Small unique string."
      }
    },
    "vnetPrefix": {
      "type": "string",
      "metadata": {
        "description": "Virtual Network Address Prefix CIDR"
      }
    },
    "subnet1Prefix": {
      "type": "string",
      "metadata": {
        "description": "Subnet 1 Address Prefix CIDR"
      }
    },
    "subnet2Prefix": {
      "type": "string",
      "metadata": {
        "description": "Subnet 2 Address Prefix CIDR"
      }
    },
    "subnet3Prefix": {
      "type": "string",
      "metadata": {
        "description": "Subnet 3 Prefix CIDR"
      }
    },
    "subnet4Prefix": {
      "type": "string",
      "metadata": {
        "description": "Subnet 4 CIDR"
      }
    },
    "subnet5Prefix": {
      "type": "string",
      "metadata": {
        "description": "Subnet 4 CIDR"
      }
    },
    "remoteAccessACL": {
      "type": "string",
      "metadata": {
        "description": "Remote Access CIDR"
      },
      "defaultValue": "Internet"
    }
  },
  "variables": {
    "VNetName": "[concat(parameters('unique'), uniqueString(resourceGroup().id), '-vnet')]",
    "VNetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('VNetName'))]",
    "Subnet1Name": "containertier",
    "SubNet1Id": "[concat(variables('VNetId'), '/subnets/', variables('Subnet1Name'))]",
    "Subnet2Name": "backendtier",
    "SubNet2Id": "[concat(variables('VNetId'), '/subnets/', variables('Subnet2Name'))]",
    "Subnet3Name": "frontendtier",
    "SubNet3Id": "[concat(variables('VNetId'), '/subnets/', variables('Subnet3Name'))]",
    "Subnet4Name": "managetier",
    "SubNet4Id": "[concat(variables('VNetId'), '/subnets/', variables('Subnet4Name'))]",
    "Subnet5Name": "GatewaySubnet",
    "SubNet5Id": "[concat(variables('VNetId'), '/subnets/', variables('Subnet5Name'))]",
    "Nsg1Name": "[concat(variables('VNetName'), '-', variables('Subnet1Name'), '-nsg')]",
    "Nsg2Name": "[concat(variables('VNetName'), '-', variables('Subnet2Name'), '-nsg')]",
    "Nsg3Name": "[concat(variables('VNetName'), '-', variables('Subnet3Name'), '-nsg')]",
    "Nsg4Name": "[concat(variables('VNetName'), '-', variables('Subnet4Name'), '-nsg')]"
  },
  "resources": [
    {
      "comments": "## Network Security Group ##",
      "name": "[variables('nsg1Name')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2015-05-01-preview",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "Network Security Group - Container Tier"
      },
      "properties": {
        "securityRules": [
          {
            "name": "ssh_rule",
            "properties": {
              "description": "Allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "virtualnetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "http_rule",
            "properties": {
              "description": "Allow Web",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "virtualnetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "https_rule",
            "properties": {
              "description": "Allow Web",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "virtualnetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 210,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "comments": "## Network Security Group ##",
      "name": "[variables('nsg2Name')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2015-05-01-preview",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "Network Security Group - Backend Tier"
      },
      "properties": {
        "securityRules": [
          {
            "name": "ssh_rule",
            "properties": {
              "description": "Allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "virtualnetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "http_rule",
            "properties": {
              "description": "Allow Web",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "virtualnetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "https_rule",
            "properties": {
              "description": "Allow Web",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "virtualnetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 210,
              "direction": "Inbound"
            }
          },
          {
            "name": "mysql_rule",
            "properties": {
              "description": "Allow SQL",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3306",
              "sourceAddressPrefix": "[parameters('remoteAccessACL')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 220,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "comments": "## Network Security Group ##",
      "name": "[variables('nsg3Name')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2015-05-01-preview",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "Network Security Group - Frontend Tier"
      },
      "properties": {
        "securityRules": [
          {
            "name": "ssh_rule",
            "properties": {
              "description": "Allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "virtualnetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "http_rule",
            "properties": {
              "description": "Allow Web",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "virtualnetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "https_rule",
            "properties": {
              "description": "Allow Web",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "virtualnetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 210,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "comments": "## Network Security Group ##",
      "name": "[variables('nsg4Name')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2015-05-01-preview",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "Network Security Group - Manage Tier"
      },
      "properties": {
        "securityRules": [
          {
            "name": "ssh_rule",
            "properties": {
              "description": "Allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "[parameters('remoteAccessACL')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "comments": "## Virtual Network ##",
      "name": "[variables('VNetName')]",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2016-03-30",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg1Name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg2Name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg3Name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg4Name'))]"
      ],
      "tags": {
        "displayName": "Virtual Network"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('VNetPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('Subnet1Name')]",
            "properties": {
              "addressPrefix": "[parameters('Subnet1Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg1Name'))]"
              },
              "serviceEndpoints": [
                {
                  "service": "Microsoft.Sql"
                },
                {
                  "service": "Microsoft.Storage"
                },
                {
                  "service": "Microsoft.Web"
                }
              ]
            }
          },
          {
            "name": "[variables('Subnet2Name')]",
            "properties": {
              "addressPrefix": "[parameters('Subnet2Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg2Name'))]"
              }
            },
            "serviceEndpoints": [
              {
                "service": "Microsoft.Sql"
              },
              {
                "service": "Microsoft.Storage"
              },
              {
                "service": "Microsoft.Web"
              }
            ]
          },
          {
            "name": "[variables('Subnet3Name')]",
            "properties": {
              "addressPrefix": "[parameters('Subnet3Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg3Name'))]"
              },
              "serviceEndpoints": [
                {
                  "service": "Microsoft.Sql"
                },
                {
                  "service": "Microsoft.Storage"
                },
                {
                  "service": "Microsoft.Web"
                }
              ]
            }
          },
          {
            "name": "[variables('Subnet4Name')]",
            "properties": {
              "addressPrefix": "[parameters('Subnet4Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg4Name'))]"
              }
            }
          },
          {
            "name": "[variables('Subnet5Name')]",
            "properties": {
              "addressPrefix": "[parameters('Subnet5Prefix')]"
            }
          }
        ]
      }
    }
  ],
  "outputs": {
    "virtualNetwork": {
      "type": "object",
      "value": {
        "id": "[variables('VNetId')]",
        "name": "[variables('VNetName')]"
      }
    },
    "subnets": {
      "type": "object",
      "value": {
        "subnet1Id": "[variables('subnet1Id')]",
        "subnet2Id": "[variables('subnet2Id')]",
        "subnet3Id": "[variables('subnet3Id')]",
        "subnet4Id": "[variables('subnet4Id')]",
        "subnet5Id": "[variables('subnet5Id')]"
      }
    }
  }
}
